// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithFilter 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;
